crates/ruff_python_literal/src/snapshots/ruff_python_literal__format__tests__format_unicode_escape.snap
---
source: crates/ruff_python_literal/src/format.rs
expression: "FormatString::from_str(\"I am a \\\\N{snowman}\")"
---
Ok(
    FormatString {
        format_parts: [
            Literal(
                "I am a \\N{snowman}",
            ),
        ],
    },
)
