crates/ruff_python_literal/src/snapshots/ruff_python_literal__format__tests__format_unicode_escape_with_field.snap
---
source: crates/ruff_python_literal/src/format.rs
expression: "FormatString::from_str(\"I am a \\\\N{snowman}{snowman}\")"
---
Ok(
    FormatString {
        format_parts: [
            Literal(
                "I am a \\N{snowman}",
            ),
            Field {
                field_name: "snowman",
                conversion_spec: None,
                format_spec: "",
            },
        ],
    },
)
